# chess

./: .coveragerc  .env.example  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  tasks.py  todo.md
.github/workflows/: flake8.yml  mypy.yml  pylint.yml  pytest.yml
.gitlab/ci/: defaults.yml
.gitlab/ci/stages/: flake8.yml  mypy.yml  pylint.yml  pytest.yml
src/chess/: board.py  config.py  game.py  game_engine.py  game_instance.py  main.py  pieces.py
src/chess/components/: __init__.py  board.py  piece.py  piece_factory.py
src/chess/components/pieces/: __init__.py  abstract_piece.py  bishop.py  king.py  knight.py  pawn.py  piece_factory.py  piece_meta.py  queen.py  rook.py
src/chess/exceptions/: __init__.py  piece_not_found_error.py  scenario_not_found_error.py
src/chess/game/: engine.py  instance.py
src/chess/game/scenario/: __init__.py  scenario_factory.py  scenarios.py
tests/: conftest.py
tests/integration/: test_problem_scenario.py  test_set_up_scenario.py
tests/integration/utilities/: __init__.py  coin.py  die.py  game_helpers.py
tests/src/chess/components/: test_board.py
tests/src/chess/components/pieces/: test_bishop.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py
tests/src/chess/game/: test_engine.py  test_instance.py
tests/src/chess/game/scenario/: test_scenario_factory.py
tests/unit/src/chess/components/: test_board.py  test_piece_factory.py
tests/unit/src/chess/exceptions/: test_piece_not_found_error.py  test_scenario_not_found_error.py
(+10 files in other folders)
