[tool.poetry]
name = "chess"
version = "0.0.1"
description = "A chess POC in python"
authors = ["James Galecki <james.galecki@gmail.com>"]
readme = "README.md"
packages = [{ include = "chess", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pygame = "^2.5.2"
environs = "^14.1.1"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pylint = "^3.3.7"
mypy = "^1.15.0"
flake8 = "^7.2.0"
pytest = "^8.2.0"
debugpy = "^1.8.14"
pytest-cov = "^6.1.1"
pyinstaller = "^6.13.0"
pylint-pytest = "^1.1.8"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
no_implicit_reexport = true
check_untyped_defs = true
follow_imports = "normal"
show_column_numbers = true
show_error_codes = true
disable_error_code = [
    "misc",
    "call-overload",
    "no-any-return",
    "attr-defined",
    "union-attr",
    "import-untyped",
    "no-any-unimported",
]

[tool.black]
line-length = 140
